[project]
name = "aya-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "pillow>=11.3.0",
    "torch>=2.8.0",
    "transformers",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "v4.49.0-AyaVision" }
